crates/core/tests/snapshots/container_finalize_test__container_finalize__unnamed_enum__supports_nested_collections.snap
---
source: crates/core/tests/container_finalize_test.rs
expression: pretty(container.impl_partial_finalize())
---
fn finalize(
    self,
    context: &Self::Context,
) -> std::result::Result<Self, schematic::ConfigError> {
    Ok(
        match self {
            Self::A(pa) => {
                Self::A({
                    let mut list = Vec::default();
                    for pa in pa {
                        list.push(pa.finalize(context)?);
                    }
                    list
                })
            }
            Self::B(pa) => {
                Self::B(
                    transform_config(
                        {
                            let mut map = HashMap::default();
                            for (key, pa) in pa {
                                map.insert(key, pa.finalize(context)?);
                            }
                            map
                        },
                        context,
                    )?,
                )
            }
            Self::C(pa) => {
                Self::C(
                    transform_config(
                        match pa {
                            Some(pa) => {
                                Some({
                                    let mut set = BTreeSet::default();
                                    for pa in pa {
                                        set.insert(pa.finalize(context)?);
                                    }
                                    set
                                })
                            }
                            None => None,
                        },
                        context,
                    )?,
                )
            }
            _ => self,
        },
    )
}
